tests/ui/issues/issue-23543.stderr
error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-23543.rs:7:17
   |
LL |         where T<Bogus = Foo>: A;
   |                 ^^^^^^^^^^^ associated item constraint not allowed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0229`.
